# dichiarino-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
site/: index.html
site/css/: style.css
site/js/: main.js
skills/: README.md
skills/analizza-cu/: SKILL.md
skills/analizza-cu/references/: CU_CAMPI.md
skills/calcola-detrazioni-730/: SKILL.md
skills/calcola-detrazioni-730/references/: DETRAZIONI.md
skills/calcola-irpef-730/: SKILL.md
skills/calcola-irpef-730/references/: IRPEF_BRACKETS.md
skills/checklist-documenti-730/: SKILL.md
skills/checklist-documenti-730/assets/: CHECKLIST_TEMPLATE.md
skills/compila-quadro-730/: SKILL.md
skills/compila-quadro-730/references/: QUADRI.md
skills/verifica-codice-fiscale/: SKILL.md
skills/verifica-codice-fiscale/references/: CHECK_DIGIT.md
src/dichiarino/: main.py  server.py  types.py
src/dichiarino/calculators/: addizionali.py  detrazioni_familiari.py  detrazioni_lavoro.py  irpef.py  oneri.py
src/dichiarino/data/: addizionali_regionali.py  aliquote_irpef.py  istruzioni_quadri.py  limiti_detrazioni.py
src/dichiarino/resources/: risorse.py
src/dichiarino/tools/: analizza_cu.py  calcola_addizionale_regionale.py  calcola_detrazioni_familiari.py  calcola_detrazioni_lavoro.py  calcola_irpef.py  calcola_oneri.py  calcola_risultato.py  checklist_documenti.py  guida_quadro.py  valida_codice_fiscale.py
src/dichiarino/validators/: codice_fiscale.py
tests/calculators/: test_addizionali.py  test_detrazioni_familiari.py  test_detrazioni_lavoro.py  test_irpef.py  test_oneri.py
tests/integration/: test_server.py
tests/validators/: test_codice_fiscale.py
