[project]
name = "dichiarino-mcp"
version = "0.2.1"
description = "Il tuo assistente fiscale intelligente per il 730 precompilato"
readme = "README.md"
license = { file = "LICENSE" }
license-expression = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
keywords = ["mcp", "tax", "italia", "730", "irpef", "dichiarazione", "precompilata"]
authors = [{ name = "Dichiarino Contributors" }]
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
dichiarino = "dichiarino.main:main"

[project.urls]
Homepage = "https://github.com/gsaccardi/dichiarino-mcp"
Repository = "https://github.com/gsaccardi/dichiarino-mcp"
Issues = "https://github.com/gsaccardi/dichiarino-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/dichiarino"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = ["src/dichiarino"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "PT", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["dichiarino"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src/dichiarino"]
omit = ["tests/*"]
